gitlab/traefik-gitlab.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab
  namespace: public-service
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gitlab.k8s.dix.asia
    http:
      paths:
      - backend:
          serviceName: gitlab
          servicePort: 80
